# alian_structure-contracts

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
contracts/aid-contract/: Cargo.toml
contracts/aid-contract/src/: errors.rs  events.rs  lib.rs  storage.rs  tests.rs  types.rs
contracts/governance-contract/: Cargo.toml
contracts/governance-contract/src/: lib.rs
contracts/oracle-contract/: Cargo.toml
contracts/oracle-contract/src/: lib.rs
contracts/referral-contract/: Cargo.toml
contracts/referral-contract/src/: lib.rs
contracts/registry-contract/: Cargo.toml
contracts/registry-contract/src/: lib.rs
contracts/treasury-contract/: Cargo.toml
contracts/treasury-contract/src/: lib.rs  test.rs
scripts/: deploy.sh  initialize.sh  upgrade.sh  verify.sh
shared/: Cargo.toml  README.md
shared/src/: auth.rs  errors.rs  events.rs  lib.rs  math.rs  storage.rs  test_auth.rs  test_storage.rs  utils.rs
tests/: integration.rs
