[workspace]
resolver = "2"
members = [
    "contracts/aid-contract",
    "contracts/treasury-contract",
    "contracts/referral-contract",
    "contracts/governance-contract",
    "contracts/oracle-contract",
    "contracts/registry-contract",
    "shared",
]

[workspace.dependencies]
soroban-sdk = { version = "22.0.1", default-features = true }
shared = { path = "shared" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true
panic = "abort"
strip = "symbols"
debug = false
